# airbnb

./: pyproject.toml
bookings/: models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py  serializers.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category.py  0003_alter_experience_category_alter_experience_host_and_more.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experiences_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  temp  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_category.py  0003_alter_room_amenities_alter_room_category_and_more.py
rooms/templates/: all_rooms.html  room_detail.html
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_profile_photo_user_avatar.py  0003_alter_user_avatar.py  0004_alter_user_avatar.py
wishlists/: models.py  views.py
(+2 files in other folders)
