[tool.poetry]
name = "airbnb"
version = "0.1.0"
description = ""
authors = ["moonk <mkjoehsb@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.6"
Pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
